# transport

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vix.json
cmake/: softadastra_transportConfig.cmake.in
docs/: guide.md
examples/: CMakeLists.txt  basic_client.cpp  basic_server.cpp  dispatcher_ping.cpp  drive_end_to_end_demo_client.cpp  drive_end_to_end_demo_server.cpp  full_sync_demo_client.cpp  full_sync_demo_server.cpp  message_codec.cpp  peer_registry.cpp  sync_bridge.cpp
include/softadastra/transport/: Transport.hpp
include/softadastra/transport/ack/: TransportAck.hpp
include/softadastra/transport/backend/: ITransportBackend.hpp  TcpTransportBackend.hpp
include/softadastra/transport/client/: TransportClient.hpp
include/softadastra/transport/core/: PeerInfo.hpp  TransportConfig.hpp  TransportContext.hpp  TransportEnvelope.hpp  TransportMessage.hpp
include/softadastra/transport/dispatcher/: MessageDispatcher.hpp
include/softadastra/transport/encoding/: MessageDecoder.hpp  MessageEncoder.hpp
include/softadastra/transport/engine/: TransportEngine.hpp
include/softadastra/transport/peer/: PeerRegistry.hpp  PeerSession.hpp
include/softadastra/transport/platform/linux/: TcpSocket.hpp
include/softadastra/transport/server/: TransportServer.hpp
include/softadastra/transport/types/: MessageType.hpp  PeerState.hpp  TransportStatus.hpp
include/softadastra/transport/utils/: Frame.hpp
platform/linux/: TcpSocket.cpp
src/ack/: TransportAck.cpp
src/backend/: ITransportBackend.cpp  TcpTransportBackend.cpp
src/client/: TransportClient.cpp
src/dispatcher/: MessageDispatcher.cpp
src/encoding/: MessageDecoder.cpp  MessageEncoder.cpp
src/engine/: TransportEngine.cpp
src/peer/: PeerRegistry.cpp  PeerSession.cpp
src/server/: TransportServer.cpp
src/utils/: Frame.cpp
tests/: CMakeLists.txt  test_ack.cpp  test_dispatcher.cpp  test_encoding.cpp  test_engine.cpp  test_handshake.cpp  test_message.cpp  test_peer_registry.cpp  test_tcp_backend.cpp
